@@ -7,6 +7,10 @@ MISSING_REQUIRED = @REQUIRED@
 
 package-depth = @package_depth@
 
+################################################################
+## FLAGS
+################################################################
+
 FREETYPE2_CFLAGS = @FREETYPE2_CFLAGS@
 GTK2_CFLAGS = @GTK2_CFLAGS@
 GUILE_CFLAGS = @GUILE_CFLAGS@
@@ -30,6 +34,10 @@ CONFIG_LDFLAGS = @LDFLAGS@
 PACKAGE = @PACKAGE@
 package = @package@
 PACKAGE_NAME = @PACKAGE_NAME@
+
+################################################################
+## FILESYSTEM
+################################################################
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
@@ -78,6 +86,13 @@ lilypond_omfdir = $(local_package_omfdir)
 webdir = $(lilypond_docdir)/html
 vimdir = $(lilypond_datadir)/vim
 
+
+NCSB_PATH = @NCSB_PATH@
+
+################################################################
+## PROGRAMS
+################################################################
+
 AR = @AR@
 BASH = @BASH@
 BISON = @BISON@
@@ -125,3 +140,4 @@ TAR = @TAR@
 WINDRES = @WINDRES@
 YACC = @YACC@
 ZIP = @ZIP@
+
